--- a/Resources/Prototypes/_AU14/Entities/Clothing/Armor/marinearmor.yml
+++ b/Resources/Prototypes/_AU14/Entities/Clothing/Armor/marinearmor.yml
@@ -149,3 +149,14 @@
     sprintModifier: .725
   - type: ClothingBlockBackpack
   - type: SmartGunArmor
+
+- type: entity
+  parent: [RMCAllowSuitStorageClothingHazardVest, RMCBaseJacket]
+  id: AU14ExternalWebbing
+  name: external webbing
+  description: An exterior webbing based off the original alice rig.
+  components:
+  - type: Sprite
+    sprite: _AU14/Clothing/externalwebbing.rsi
+  - type: Clothing
+    sprite: _AU14/Clothing/externalwebbing.rsi
