--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -21,6 +21,10 @@
         amount: 30
       - id: AU14JungleFatigues
         amount: 30
+      - id: AU14SnowFatigues
+        amount: 30
+      - id: AU14MixedSnowFatigues
+        amount: 30
       - id: CMHandsBrown
         amount: 20
       - id: CMHandsBlackMarine
@@ -692,6 +696,10 @@
         amount: 2
       - id: AU14JungleFatigues
         amount: 2
+      - id: AU14SnowFatigues
+        amount: 30
+      - id: AU14MixedSnowFatigues
+        amount: 30
       - id: CMJumpsuitXOFormal
         amount: 2
       - id: CMJumpsuitOperations
@@ -730,7 +738,7 @@
         amount: 2
       - id: AU14DesertPatrolCap
         amount: 2
-    - name: Armor
+    - name: Armor and Rigs
       entries:
       - id: AU14ArmorM3JungleOne
         amount: 2
@@ -743,6 +751,8 @@
       - id: AU14ArmorM3DesertTwo
         amount: 2
       - id: AU14ArmorM3DesertThree
+        amount: 2
+      - id: AU14ExternalWebbing
         amount: 2
     - name: Backpack
       entries:
