--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -17,6 +17,8 @@
         amount: 20
       - id: CMBootsBrown
         amount: 20
+      - id: AU14BootsJungle
+        amount: 20
       - id: AU14DesertFatigues
         amount: 30
       - id: AU14JungleFatigues
@@ -129,12 +131,18 @@
         amount: 1
       - id: RMCPouchMagazine
         amount: 15
-      - id: RMCPouchShotgun
+      - id: RMCPouchMagazineLarge
+        amount: 2
+      - id: RMCPouchShotgunLarge
         amount: 4
       - id: RMCPouchGeneralMedium
         amount: 15
+      - id: RMCPouchGeneralLarge
+        amount: 2
       - id: RMCPouchMagazinePistol
         amount: 15
+      - id: RMCPouchMagazinePistolLarge
+        amount: 2
       - id: RMCPouchPistol
         amount: 15
       - id: RMCPouchConstruction
@@ -143,8 +151,6 @@
         amount: 1
       - id: RMCPouchFirstResponder
         name: First Responder Pouch (Empty)
-        amount: 2
-      - id: RMCPouchMagazinePistolLarge
         amount: 2
       - id: RMCPouchTools
         amount: 15
@@ -489,6 +495,8 @@
         amount: 2
       - id: CMBootsBrown
         amount: 2
+      - id: AU14BootsJungle
+        amount: 2
       - id: AU14TacticalFlightSuit
         amount: 2
       - id: CMJumpsuitPilot
@@ -688,6 +696,8 @@
         amount: 2
       - id: CMBootsBrown
         amount: 2
+      - id: AU14BootsJungle
+        amount: 2
       - id: AU14DesertFatigues
         amount: 2
       - id: AU14JungleFatigues
@@ -726,6 +736,7 @@
         amount: 2
       - id: RMCHeadBeretSquad
         amount: 2
+        name: Black Beret
       - id: AU14JunglePatrolCap
         amount: 2
       - id: AU14DesertPatrolCap
@@ -791,6 +802,8 @@
       - id: RMCPouchMagazinePistolLarge
         amount: 2
       - id: RMCPouchTools
+        amount: 2
+      - id: RMCPouchCommand
         amount: 2
 #      - id: Sling Pouch
 #        amount: 1
