--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -17,15 +17,9 @@
         amount: 20
       - id: CMBootsBrown
         amount: 20
-      - id: AU14BootsJungle
-        amount: 20
       - id: AU14DesertFatigues
         amount: 30
       - id: AU14JungleFatigues
-        amount: 30
-      - id: AU14SnowFatigues
-        amount: 30
-      - id: AU14MixedSnowFatigues
         amount: 30
       - id: CMHandsBrown
         amount: 20
@@ -135,18 +129,12 @@
         amount: 1
       - id: RMCPouchMagazine
         amount: 15
-      - id: RMCPouchMagazineLarge
-        amount: 2
-      - id: RMCPouchShotgunLarge
+      - id: RMCPouchShotgun
         amount: 4
       - id: RMCPouchGeneralMedium
         amount: 15
-      - id: RMCPouchGeneralLarge
-        amount: 2
       - id: RMCPouchMagazinePistol
         amount: 15
-      - id: RMCPouchMagazinePistolLarge
-        amount: 2
       - id: RMCPouchPistol
         amount: 15
       - id: RMCPouchConstruction
@@ -155,6 +143,8 @@
         amount: 1
       - id: RMCPouchFirstResponder
         name: First Responder Pouch (Empty)
+        amount: 2
+      - id: RMCPouchMagazinePistolLarge
         amount: 2
       - id: RMCPouchTools
         amount: 15
@@ -499,8 +489,6 @@
         amount: 2
       - id: CMBootsBrown
         amount: 2
-      - id: AU14BootsJungle
-        amount: 2
       - id: AU14TacticalFlightSuit
         amount: 2
       - id: CMJumpsuitPilot
@@ -700,16 +688,10 @@
         amount: 2
       - id: CMBootsBrown
         amount: 2
-      - id: AU14BootsJungle
-        amount: 2
       - id: AU14DesertFatigues
         amount: 2
       - id: AU14JungleFatigues
         amount: 2
-      - id: AU14SnowFatigues
-        amount: 30
-      - id: AU14MixedSnowFatigues
-        amount: 30
       - id: CMJumpsuitXOFormal
         amount: 2
       - id: CMJumpsuitOperations
@@ -744,12 +726,11 @@
         amount: 2
       - id: RMCHeadBeretSquad
         amount: 2
-        name: Black Beret
       - id: AU14JunglePatrolCap
         amount: 2
       - id: AU14DesertPatrolCap
         amount: 2
-    - name: Armor and Rigs
+    - name: Armor
       entries:
       - id: AU14ArmorM3JungleOne
         amount: 2
@@ -762,8 +743,6 @@
       - id: AU14ArmorM3DesertTwo
         amount: 2
       - id: AU14ArmorM3DesertThree
-        amount: 2
-      - id: AU14ExternalWebbing
         amount: 2
     - name: Backpack
       entries:
@@ -812,8 +791,6 @@
       - id: RMCPouchMagazinePistolLarge
         amount: 2
       - id: RMCPouchTools
-        amount: 2
-      - id: RMCPouchCommand
         amount: 2
 #      - id: Sling Pouch
 #        amount: 1
