--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -17,9 +17,15 @@
         amount: 20
       - id: CMBootsBrown
         amount: 20
+      - id: AU14BootsJungle
+        amount: 20
       - id: AU14DesertFatigues
         amount: 30
       - id: AU14JungleFatigues
+        amount: 30
+      - id: AU14SnowFatigues
+        amount: 30
+      - id: AU14MixedSnowFatigues
         amount: 30
       - id: CMHandsBrown
         amount: 20
@@ -129,12 +135,18 @@
         amount: 1
       - id: RMCPouchMagazine
         amount: 15
-      - id: RMCPouchShotgun
+      - id: RMCPouchMagazineLarge
+        amount: 2
+      - id: RMCPouchShotgunLarge
         amount: 4
       - id: RMCPouchGeneralMedium
         amount: 15
+      - id: RMCPouchGeneralLarge
+        amount: 2
       - id: RMCPouchMagazinePistol
         amount: 15
+      - id: RMCPouchMagazinePistolLarge
+        amount: 2
       - id: RMCPouchPistol
         amount: 15
       - id: RMCPouchConstruction
@@ -143,8 +155,6 @@
         amount: 1
       - id: RMCPouchFirstResponder
         name: First Responder Pouch (Empty)
-        amount: 2
-      - id: RMCPouchMagazinePistolLarge
         amount: 2
       - id: RMCPouchTools
         amount: 15
@@ -489,6 +499,8 @@
         amount: 2
       - id: CMBootsBrown
         amount: 2
+      - id: AU14BootsJungle
+        amount: 2
       - id: AU14TacticalFlightSuit
         amount: 2
       - id: CMJumpsuitPilot
@@ -688,10 +700,16 @@
         amount: 2
       - id: CMBootsBrown
         amount: 2
+      - id: AU14BootsJungle
+        amount: 2
       - id: AU14DesertFatigues
         amount: 2
       - id: AU14JungleFatigues
         amount: 2
+      - id: AU14SnowFatigues
+        amount: 30
+      - id: AU14MixedSnowFatigues
+        amount: 30
       - id: CMJumpsuitXOFormal
         amount: 2
       - id: CMJumpsuitOperations
@@ -726,11 +744,12 @@
         amount: 2
       - id: RMCHeadBeretSquad
         amount: 2
+        name: Black Beret
       - id: AU14JunglePatrolCap
         amount: 2
       - id: AU14DesertPatrolCap
         amount: 2
-    - name: Armor
+    - name: Armor and Rigs
       entries:
       - id: AU14ArmorM3JungleOne
         amount: 2
@@ -743,6 +762,8 @@
       - id: AU14ArmorM3DesertTwo
         amount: 2
       - id: AU14ArmorM3DesertThree
+        amount: 2
+      - id: AU14ExternalWebbing
         amount: 2
     - name: Backpack
       entries:
@@ -791,6 +812,8 @@
       - id: RMCPouchMagazinePistolLarge
         amount: 2
       - id: RMCPouchTools
+        amount: 2
+      - id: RMCPouchCommand
         amount: 2
 #      - id: Sling Pouch
 #        amount: 1
