--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -29,7 +29,7 @@
         amount: 30
       - id: CMHandsBrown
         amount: 20
-      - id: CMHandsBlackMarine
+      - id: AU14PVEHandsInsulatedBlackMarine
         amount: 20
       - id: RMCHeadsetMarine
         amount: 20
@@ -312,7 +312,7 @@
       - id: CMPacketPillsKelotane
         amount: 30
 
-#corpsman  
+#corpsman
 - type: entity
   parent: ColMarTechBase
   id: AU14USCMcorpsmanvendor
@@ -507,7 +507,7 @@
         amount: 2
       - id: CMHandsBrown
         amount: 2
-      - id: CMHandsBlackMarine
+      - id: AU14PVEHandsInsulatedBlackMarine
         amount: 2
       - id: CMHeadsetPilot
         amount: 2
@@ -716,7 +716,7 @@
         amount: 2
       - id: CMHandsBrown
         amount: 2
-      - id: CMHandsBlackMarine
+      - id: AU14PVEHandsInsulatedBlackMarine
         amount: 2
       - id: CMHeadsetSeniorCommand
         amount: 2
