Add medivac stretcher to corpsman vendor.

--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -456,7 +456,9 @@
      #    CMMS11SmartRefillTank
      # FixOVien
       - id: CMRollerBedSpawnFolded
-        amount: 4
+        amount: 2
+      - id: RMCMedevacStretcherFolded
+        amount: 1
       - id: CMStasisBagFolded
         amount: 4
       - id: RMCBoxBodyBag
