--- a/Resources/Prototypes/_AU14/Roles/Jobs/Command/platoon_commander.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Command/platoon_commander.yml
@@ -3,8 +3,8 @@
   id: AU14PlatoonCommander
   name: cm-job-name-platoon-commander
   description: cm-job-description-platoon-commander
+  setPreference: false
   playTimeTracker: AU14JobPlatoonCommander
-  setPreference: true
   ranks:
     RMCRankSecondLT: []
   weight: 5
