--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/hospital_corpsman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/hospital_corpsman.yml
@@ -44,6 +44,8 @@
         RMCSkillJtac: 1
         RMCSkillMedical: 2
         RMCSkillSurgery: 1
+        RMCSkillConstruction: 2
+        RMCSkillEngineer: 3
     - type: CMVendorUser
       points: 45
     - type: SquadArmorWearer
