--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/rifleman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/rifleman.yml
@@ -32,6 +32,8 @@
     - type: Skills
       skills:
         RMCSkillFirearms: 1
+        RMCSkillConstruction: 2
+        RMCSkillEngineer: 3
     - type: CMVendorUser
       points: 45
     - type: SquadArmorWearer
