--- a/Resources/Prototypes/_AU14/Roles/Jobs/Command/platoon_operations_officer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Command/platoon_operations_officer.yml
@@ -4,7 +4,7 @@
   name: cm-job-name-platoon-operations-officer
   description: cm-job-description-platoon-operations-officer
   setPreference: false
-  playTimeTracker: CMJobStaffOfficer
+  playTimeTracker: AU14JobPlatoonOperationsOfficer
   ranks:
     RMCRankSecondLT: []
   weight: 5
