--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m54c_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m54c_rifle.yml
@@ -1,6 +1,6 @@
 ﻿- type: entity
   parent: CMBaseWeaponRifle
-  name: M54C assault rifle MK2
+  name: M41A pulse rifle MK2
   id: WeaponRifleM54C
   description: The standard issue rifle of the Marines. Commonly carried by most combat personnel. Uses 10x24mm caseless ammunition.
   components:
@@ -110,7 +110,7 @@
 - type: entity
   parent: CMMagazineRifleBase
   id: CMMagazineRifleM54C
-  name: "M54C magazine (10x24mm)"
+  name: "M41A magazine (10x24mm)"
   components:
   - type: Tag
     tags:
@@ -137,7 +137,7 @@
 - type: entity
   parent: CMMagazineRifleM54C
   id: CMMagazineRifleM54CAP
-  name: "M54C AP magazine (10x24mm)"
+  name: "M41A AP magazine (10x24mm)"
   suffix: AP
   components:
   - type: Tag
@@ -164,7 +164,7 @@
 - type: entity
   parent: CMMagazineRifleM54C
   id: CMMagazineRifleM54CExt
-  name: "M54C extended magazine (10x24mm)"
+  name: "M41A extended magazine (10x24mm)"
   components:
   - type: Tag
     tags:
