--- a/Resources/Prototypes/_AU14/marinevendors.yml
+++ b/Resources/Prototypes/_AU14/marinevendors.yml
@@ -123,7 +123,7 @@
     - name: Pouches
       entries:
       - id: RMCPouchBayonet
-        name: Bayonet Sheath (Full)
+        name: Bayonet Sheath
         amount: 15
       - id: RMCPouchFirstAid
         name: First-Aid Pouch (Empty)
@@ -230,6 +230,10 @@
         amount: 5
     - name: Tools
       entries:
+      - id: RMCM5Bayonet
+        amount: 30
+      - id: CMM11Knife
+        amount: 15
       - id: CMEntrenchingTool
         amount: 5
       - id: CMScrewdriver
@@ -564,7 +568,7 @@
     - name: Pouches
       entries:
       - id: RMCPouchBayonet
-        name: Bayonet Sheath (Full)
+        name: Bayonet Sheath
         amount: 2
       - id: RMCPouchFirstAid
         name: First-Aid Pouch (Empty)
@@ -794,7 +798,7 @@
     - name: Pouches
       entries:
       - id: RMCPouchBayonet
-        name: Bayonet Sheath (Full)
+        name: Bayonet Sheath
         amount: 2
       - id: RMCPouchFirstAid
         name: First-Aid Pouch (Empty)
