--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
@@ -3,6 +3,7 @@
   id: CMLiaison
   name: cm-job-name-liaison
   description: cm-job-description-liaison
+  setPreference: false
   requirements:
   - !type:TotalDepartmentsTimeRequirement
     group: CMDepartmentsHuman
