--- a/Resources/Prototypes/_RMC14/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/_RMC14/Voice/speech_emotes.yml
@@ -172,7 +172,18 @@
     - whined!
     - whining.
 
-
-
-
-
+- type: emote
+  id: Warcry
+  name: au14-emote-name-warcry
+  category: Vocal
+  whitelist:
+    components:
+    - Vocal
+  blacklist:
+    components:
+    - BorgChassis
+  icon: _AU14/Interface/Emotes/warcry.png
+  chatMessages: ["au14-chat-emote-msg-warcry"]
+  chatTriggers:
+   - shouts an inspiring cry
+   - shouts an inspiring cry!
