--- a/Resources/Prototypes/_RMC14/Voice/base_speech_emote_sounds.yml
+++ b/Resources/Prototypes/_RMC14/Voice/base_speech_emote_sounds.yml
@@ -28,6 +28,8 @@
       collection: MaleGasp
     DefaultDeathgasp:
       collection: MaleDeathGasp
+    Warcry: 
+      collection: AU14MaleWarcry
 
 - type: emoteSounds
   parent: RMCBaseHumanoidSounds
@@ -48,3 +50,5 @@
       collection: FemaleGasp
     DefaultDeathgasp:
       collection: FemaleDeathGasp
+    Warcry: 
+      collection: AU14FemaleWarcry
