--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m54c_heavy_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m54c_heavy_rifle.yml
@@ -1,5 +1,5 @@
 ﻿- type: entity
-  name: M54CE2 heavy assault rifle
+  name: M41AE2 heavy pulse rifle
   parent: CMBaseWeaponRifle
   id: WeaponRifleM54CE2
   description: A large squad support weapon capable of laying down sustained suppressing fire from a mounted position. While unstable and less accurate, it can be lugged and shot with two hands.
@@ -107,7 +107,7 @@
 - type: entity
   parent: CMMagazineRifleM54C
   id: CMMagazineRifleM54CE2
-  name: "M54CE2 magazine (10x24mm)"
+  name: "M41AE2 drum (10x24mm)"
   components:
   - type: Tag
     tags:
