--- a/Resources/Prototypes/_RMC14/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/_RMC14/Voice/speech_emotes.yml
@@ -187,3 +187,19 @@
   chatTriggers:
    - shouts an inspiring cry
    - shouts an inspiring cry!
+
+- type: emote
+  id: Corpsman
+  name: au14-emote-name-corpsman
+  category: Vocal
+  whitelist:
+    components:
+    - Vocal
+  blacklist:
+    components:
+    - BorgChassis
+  icon: _AU14/Interface/Emotes/corpsman.png
+  chatMessages: ["au14-chat-emote-msg-corpsman"]
+  chatTriggers:
+   - screams for a corpsman
+   - screams for a corpsman!
