--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Cases/gun_cases.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Cases/gun_cases.yml
@@ -23,8 +23,8 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCGunCasePistolMK80
-  name: MK80 pistol case
-  description: A gun case containing the MK80. Comes with two magazines.
+  name: VP78 pistol case
+  description: A gun case containing the VP78. Comes with two magazines.
   components:
   - type: Storage
     maxItemSize: Huge
@@ -74,8 +74,8 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCGunCasePistolM77
-  name: M77 Combat Pistol case
-  description: A gun case containing a M77 Combat Pistol. Comes with a rail flashlight and 6 magazines.
+  name: Mod 88 Combat Pistol case
+  description: A gun case containing a Mod 88 Combat Pistol. Comes with a rail flashlight and 6 magazines.
   components:
   - type: Storage
     maxItemSize: Huge
@@ -120,7 +120,7 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCGunCasePistolM1984
-  name: M1984 service pistol case
+  name: M4A3 service pistol case
   description:
   components:
   - type: Storage
@@ -167,8 +167,8 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCGunCaseRifleM54CE2
-  name: M54CE2 heavy assault rifle case
-  description: A gun case containing the M54CE2 heavy assault rifle. You can get additional ammunition at requisitions.
+  name: M41AE2 heavy assault rifle case
+  description: A gun case containing the M41AE2 heavy pulse rifle. You can get additional ammunition at requisitions.
   components:
   - type: Storage
     maxItemSize: Ginormous
@@ -287,8 +287,8 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCM54CMK1CaseAP
-  name: M54C assault rifle MK1 AP case
-  description: A gun case containing the M54C assault rifle MK1 loaded with AP rounds. It can only use proprietary MK1 magazines.
+  name: M41A pulse rifle MK1 AP case
+  description: A gun case containing the M41A pulse rifle MK1 loaded with AP rounds. It can only use proprietary MK1 magazines.
   components:
   - type: Storage
     maxItemSize: Huge
@@ -307,8 +307,8 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCM54CMK2Case
-  name: M54C assault rifle MK2 case
-  description: A gun case containing the M54C assault rifle MK2.
+  name: M41A pulse rifle MK2 case
+  description: A gun case containing the M41A pulse rifle MK2.
   components:
   - type: Storage
     maxItemSize: Huge
@@ -329,8 +329,8 @@
 - type: entity
   parent: RMCGunCaseBase
   id: RMCM42A2ShotgunCase
-  name: M42A2 pump shotgun case
-  description: A gun case containing the M42A2 pump shotgun.
+  name: M37A3 pump shotgun case
+  description: A gun case containing the M37A3 pump shotgun.
   components:
   - type: Storage
     maxItemSize: Huge
