--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Launchers/m83_grenade_launcher.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Launchers/m83_grenade_launcher.yml
@@ -1,8 +1,8 @@
 ﻿- type: entity
-  name: M83 grenade launcher
+  name: M95 grenade launcher
   parent: [ RMCBaseWeaponGrenadeLauncher ]
   id: WeaponLauncherM83
-  description: A heavy, 6-shot grenade launcher used by the UNMC for area denial and big explosions.
+  description: A heavy, 6-shot grenade launcher used by the USCM for area denial and big explosions.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Weapons/Guns/GrenadeLaunchers/m83/desert.rsi
