--- a/Resources/Prototypes/_RMC14/Maps/colonyevents.yml
+++ b/Resources/Prototypes/_RMC14/Maps/colonyevents.yml
@@ -1,6 +1,6 @@
 - type: gameMap
-  id: Riptide
-  mapName: Riptide
+  id: AU14ColonyFall
+  mapName: Colony
   mapPath: /Maps/_RMC14/USSRiptide.yml
   minPlayers: 0
   maxPlayers: 75
@@ -11,13 +11,13 @@
       stationProto: StandardUNMCWarship
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'USS Riptide'
+          mapNameTemplate: 'Colony'
         - type: StationJobs
           availableJobs:
             # Command
             CMCommandingOfficer: [0, 0]
-            CMExecutiveOfficer: [1, 1]
-            CMStaffOfficer: [1, 1]
+            CMExecutiveOfficer: [0, 0]
+            CMStaffOfficer: [0, 0]
             CMSeniorEnlistedAdvisor: [0, 0]
 
             # Military Police
@@ -29,8 +29,8 @@
             CMAuxiliarySupportOfficer: [0, 0]
             CMIntelOfficer: [0, 0]
             CMPilotDropship: [0, 0]
-            CMPilotGunship: [1, 1]
-            CMDropshipCrewChief: [1, 1]
+            CMPilotGunship: [0, 0]
+            CMDropshipCrewChief: [0, 0]
 
             # Engineering
             CMChiefEngineer: [0, 0]
@@ -49,13 +49,13 @@
 #            CMMessTech: [1, 1]
 
             # Marines
-            CMSquadLeader: [1, 1]
-            CMFireteamLeader: [2, 2]
-            CMSmartGunOperator: [2, 2]
+            CMSquadLeader: [0, 0]
+            CMFireteamLeader: [0, 0]
+            CMSmartGunOperator: [0, 0]
             CMWeaponsSpecialist: [0, 0]
             CMCombatTech: [0, 0]
-            CMHospitalCorpsman: [1, 1]
-            CMRifleman: [4, 4]
+            CMHospitalCorpsman: [0, 0]
+            CMRifleman: [0, 0]
 
             # Civilians
             CMCorrespondent: [0, 0]
