--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Head/faction_hats.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Head/faction_hats.yml
@@ -14,8 +14,8 @@
 - type: entity
   parent: CMHeadBeretRed
   id: RMCHeadBeretProvost
-  name: UNMC provost beret
-  description: A beret with the UNMC Military Police insignia emblazoned on it.
+  name: USCM provost beret
+  description: A beret with the USCMC Military Police insignia emblazoned on it.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Head/Hats/beret_wo.rsi
@@ -127,7 +127,7 @@
 - type: entity
   parent: CMHeadCapCargo
   id: RMCHeadCapQuartermaster
-  name: UNMC quartermaster cap
+  name: USCM quartermaster cap
   description: It's a fancy hat for a not-so-fancy military supply clerk.
   components:
   - type: Sprite
@@ -138,7 +138,7 @@
 - type: entity
   parent: CMHeadBeret
   id: RMCHeadBeretQuartermaster
-  name: UNMC quartermaster beret
+  name: USCM quartermaster beret
   description: A beret with the sergeant insignia emblazoned on it. It symbolizes hard work and shady business.
   components:
   - type: Sprite
