--- a/Resources/Prototypes/_AU14/Entities/Items/audefib.yml
+++ b/Resources/Prototypes/_AU14/Entities/Items/audefib.yml
@@ -20,7 +20,7 @@
           True: { visible: true }
           False: { visible: false }
   - type: Item
-    size: Normal
+    size: Ginormous
     sprite: _AU14/Items/audefib.rsi
     heldPrefix: defib
   - type: Speech
