--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
@@ -120,8 +120,8 @@
 #        amount: 2
     - name: Medical utilities
       entries:
-      - id: CMDefibrillator
-        amount: 3
+#      - id: CMDefibrillator
+#        amount: 3
       - id: CMSurgicalLine
         amount: 2
       - id: CMSynthGraft
