--- a/Resources/Prototypes/_AU14/Entities/Clothing/jumpsuits.yml
+++ b/Resources/Prototypes/_AU14/Entities/Clothing/jumpsuits.yml
@@ -51,3 +51,12 @@
   components:
   - type: Sprite
     sprite: _AU14/Clothing/uscmoperationsuniform.rsi
+
+- type: entity
+  parent: [RMCMarineUniformBase, RMCAlternateFoldableUniformBase]
+  id: AU14UACGFatigues
+  name: UACG fatigues
+  description: Standard-issue UACG fatigues.
+  components:
+  - type: Sprite
+    sprite: _AU14/Clothing/desertfatigues.rsi
