--- a/Resources/Prototypes/_AU14/Entities/Clothing/Hands/marine.yml
+++ b/Resources/Prototypes/_AU14/Entities/Clothing/Hands/marine.yml
@@ -13,3 +13,25 @@
     fiberMaterial: fibers-black
     fiberColor: fibers-black
   - type: FingerprintMask
+
+- type: entity
+  parent: ClothingHandsBase
+  id: AU14PVEHandsFingerlessBlackGloves
+  name: marine black fingerless combat gloves
+  description: "Standard issue marine tactical gloves with the fingers cut off, no longer providing protection against electrical shocks. It reads: 'Knit by Marine Widows Association'."
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/black-fingerless.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/black-fingerless.rsi
+
+- type: entity
+  parent: ClothingHandsBase
+  id: AU14PVEHandsFingerlessBrownGloves
+  name: marine brown fingerless combat gloves
+  description: "Standard issue marine tactical gloves with the fingers cut off, no longer providing protection against electrical shocks. It reads: 'Knit by Marine Widows Association'."
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/brown-fingerless.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/brown-fingerless.rsi
