Fix tacmap show area labels setting not saving (#5794)
(cherry picked from commit 6c34a0bd6a463df1777277a048bf21d43bba8579)

--- a/Resources/Prototypes/_AU14/game_presets.yml
+++ b/Resources/Prototypes/_AU14/game_presets.yml
@@ -1,8 +1,21 @@
 - type: gamePreset
-  id: Insurgency
+  id: AUExtended
   alias:
   - extended
-  name: insurgency-title
+  - Extended
+  name: au-extended-title
   showInVote: true
-  description: insurgency-description
+  description: au-extended-description
   # rules:
+
+- type: gamePreset
+  id: Insurgency
+  alias:
+    - insurgency
+    - traitor
+  name: insurgency-title
+  description: insurgency-description
+  showInVote: true
+  rules:
+    - Traitor
+    - SubGamemodesRule
