--- a/Resources/Prototypes/_AU14/Entities/Clothing/LACN-USASFSECFOR/armor.yml
+++ b/Resources/Prototypes/_AU14/Entities/Clothing/LACN-USASFSECFOR/armor.yml
@@ -12,7 +12,7 @@
     walkModifier: .725
     sprintModifier: .725
   - type: CMArmor
-    armor: 15 # TODO RMC14 20 bullet
+    bullet: 20
     bio: 20
     explosionArmor: 10
   - type: CMHardArmor
@@ -31,7 +31,7 @@
     walkModifier: .725
     sprintModifier: .725
   - type: CMArmor
-    armor: 20 # TODO RMC14 20 bullet
+    bullet: 20
     bio: 20
     explosionArmor: 10
   - type: CMHardArmor
@@ -50,7 +50,7 @@
     walkModifier: .725
     sprintModifier: .725
   - type: CMArmor
-    armor: 20 # TODO RMC14 20 bullet
+    bullet: 20
     bio: 20
     explosionArmor: 10
   - type: CMHardArmor
@@ -69,7 +69,7 @@
     walkModifier: .725
     sprintModifier: .725
   - type: CMArmor
-    armor: 20 # TODO RMC14 20 bullet
+    bullet: 20
     bio: 20
     explosionArmor: 10
   - type: CMHardArmor
@@ -88,7 +88,7 @@
     walkModifier: .725
     sprintModifier: .725
   - type: CMArmor
-    armor: 25 # TODO RMC14 20 bullet
+    bullet: 20
     bio: 20
     explosionArmor: 10
   - type: CMHardArmor
